# BIBKiller

./: CMakeLists.txt  README.MD
BIBKiller/: BIBKiller.hxx  SoftBox.hxx
src/: BIBKiller.cxx  SoftBox.cxx
